# Natural-Language-Data-Analytics-Engine

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
app/: database.py  file_loader.py  llm.py  prompts.py  visualizer.py
